fix(header): sets header position and horizontal alignment

--- a/components/header/index.css
+++ b/components/header/index.css
@@ -1,11 +1,15 @@
 #main-header {
+  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 100px;
+  width: 90vw;
+  height: 68px;
+  top: 2.5vw;
+  left: 5vw;
   background-color: #444444;
-  box-shadow: 10px 15px 0px 5px black;
+  box-shadow: 5px 5px 0 0 #2f2f2f;
 }
 
 #main-header img {
@@ -13,6 +17,6 @@
 }
 
 #main-header h1 {
-  font-size: 3em;
+  font-size: 2em;
   margin-left: 20px;
 }
