--- a/index.css
+++ b/index.css
@@ -17,7 +17,6 @@ body {
 #app {
     max-width: 1366px;
     margin: 0 auto;
-    padding: 0 2rem;
 }
   
 @media (prefers-color-scheme: light) {
